--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.4.5",
-    "bp-live-color": "../bp-live-color/dist"
+    "webpack-dev-server": "^2.4.5"
   }
 }
